# ideology-mapping

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
analysis/: __init__.py  category_mapping.py  cleaning.py  dimensionality.py  insights.py  label_io.py  labeler.py  similarity.py  stats_utils.py  triangulation.py  visualize.py
data/examples/: README.md  annotations_example.parquet  annotations_mock.parquet  labels_clean.parquet  politikas_100.csv
data/examples/reference_outputs/: dimensionality_report.md  insights_report.md  validation_report.md
data/examples/triangulation_demo/: README.md  audit_gemini_mock.parquet  audit_llama_mock.parquet  reference_labels.parquet
docs/: axes.md  calibration-protocol.md  findings.md  methodology.md  prompt-engineering.md  replication-guide.md  results_summary.md
notebooks/: 01_end_to_end_demo.ipynb
prompts/: README.md  label_8axis_v1.txt  label_8axis_v1_schema.json
scripts/: generate_example_labels.py  generate_triangulation_mocks.py  run_pipeline.sh  score_proposals.py
tests/: test_smoke.py
